<resources>
    <string name="app_name">NTU Barista</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="place_order">Place Order</string>
    <string name="past_orders">Past Orders</string>
    <string name="settings">Settings</string>
    <string name="barista">Barista</string>
    <string name="barista_staff">Barista - Staff</string>
    <string name="view_all_orders">View all orders</string>
    <string name="all_orders">All orders</string>
    <string name="store_mode">Store mode</string>
    <string name="imgntu">imgNTU</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="update_menu">Update menu</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="uid">uID</string>
    <string name="date">Date</string>
    <string name="product_names">Product names</string>
    <string name="basket">Basket</string>
    <string name="tap_once">Tap once to mark as ready</string>
    <string name="tap_again">Tap again to mark as collected</string>
    <string name="status">Status</string>
    <string name="being_prepared">Being prepared</string>
    <string name="ready_to_collect">Ready for collection</string>
    <string name="collected">Collected</string>
</resources>
