<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtBarista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/barista_staff"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#e8005a" />

            <ImageView
                android:id="@+id/imgAllOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/view_all_orders"
                app:srcCompat="@drawable/orders" />

            <TextView
                android:id="@+id/txtViewOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all_orders"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/imgStoreMode"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/store_mode"
                app:srcCompat="@drawable/tick" />

            <TextView
                android:id="@+id/txtStoreMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/imgSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/update_menu"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/txtUpdateMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_menu"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
