<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtProductNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductNames" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/basket"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/basket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_edit_button" />

    <!--
    PLUS AND MINUS BUTTONS WITH INPUT FOR AMOUNT, NOT IN USE YET
    <Button
        android:id="@+id/button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_edit_button"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/edtAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edit_button"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>