<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtBarista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/barista"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#e8005a" />

            <ImageView
                android:id="@+id/imgCoffee"
                android:layout_width="410dp"
                android:layout_height="180dp"
                android:contentDescription="@string/place_order"
                app:srcCompat="@drawable/coffee" />

            <TextView
                android:id="@+id/txtPlaceOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/place_order"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/imgOrders"
                android:layout_width="wrap_content"
                android:layout_height="235dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/past_orders"
                app:srcCompat="@drawable/orders" />

            <TextView
                android:id="@+id/txtPastOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/past_orders"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/imgSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/settings"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/txtSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>