<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtBarista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/barista"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#e8005a" />

            <ImageView
                android:id="@+id/imgCoffee"
                android:layout_width="410dp"
                android:layout_height="180dp"
                android:contentDescription="@string/place_order"
                app:srcCompat="@drawable/coffee" />

            <TextView
                android:id="@+id/txtPlaceOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="redirToPlaceOrder"
                android:text="@string/place_order"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/imgOrders"
                android:layout_width="wrap_content"
                android:layout_height="235dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/past_orders"
                android:onClick="redirToPastOrders"
                app:srcCompat="@drawable/orders" />

            <TextView
                android:id="@+id/txtPastOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="redirToPastOrders"
                android:text="@string/past_orders"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
